--- a/PointPolygon/nbproject/project.properties
+++ b/PointPolygon/nbproject/project.properties
@@ -24,13 +24,13 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/PointLine.jar
+dist.jar=${dist.dir}/PointPolygon.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.OpenCSV.classpath}
+    ${libs.ShapefileReader.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -55,7 +55,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=pointline.GUI
+main.class=pointpolygon.GUI
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
